# rust

./: .gitignore  README.md
Hangman/: Cargo.toml  README.md  input.txt
Hangman/src/: main.rs
data-structures/: README.MD
data-structures/arrays/src/: main.rs
data-structures/functions/src/: clip  main.rs
data-structures/fundamentals/src/: main.rs
data-structures/fundamentals2/: Cargo.toml
data-structures/fundamentals2/src/: main.rs
euler/: Cargo.toml  new  template
euler/src/: lib.rs  main.rs
euler/src/euler/: mod.rs  p001.rs  p002.rs  p003.rs  p004.rs  p005.rs  p006.rs
euler/src/projects/: mod.rs  p001.rs  p002.rs  p003.rs  p004.rs  p005.rs  p006.rs  p007.rs  p008.rs  p009.rs  p010.rs  p011.rs  p012.rs  p013.rs  p014.rs  p015.rs  p016.rs  p017.rs  p018.rs
graphql-101/: Cargo.toml
graphql-101/data/: Clients.csv  InvoiceItems.csv  Invoices.csv  Stores.csv
graphql-101/src/: db.rs  main.rs  models.rs  schema.rs
hello/src/: lib.rs  main.rs
invaders/: Cargo.toml
password-generator/: Cargo.toml
password-generator/src/: main.rs
pwdstrength/: Cargo.toml
pwdstrength/src/: main.rs
ultimate_rust2/: README.md
ultimate_rust2/example/kitchen/: Cargo.toml
ultimate_rust2/exercise/closures_iterators/: Cargo.toml
ultimate_rust2/exercise/errors/: Cargo.toml
ultimate_rust2/exercise/logging/: Cargo.toml
ultimate_rust2/exercise/testing/: Cargo.toml
ultimate_rust2/exercise/traits/: Cargo.toml
ultimate_rust_crash_course/exercise/: bar  bar.rs  baz  baz.rs  foo  foo.rs
warp-websockets-example/: Cargo.toml
warp-websockets-example/src/: handler.rs  main.rs  model.rs
(+31 files in other folders)
