[package]
name = "warp-websockets-example"
version = "0.1.1"
authors = ["Sergio Rodrigues Giraldo <sergiorgiraldo@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.19.2", features = ["full"] }
tokio-stream = "0.1.9"
warp = "0.3"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3", default-features = false }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
crossbeam = "0.7"
actix-web = "4"
reqwest = { version = "0.11", features = ["json"] }