[package]
name = "warp-websockets-example"
version = "0.1.1"
authors = ["Sergio Rodrigues Giraldo <sergiorgiraldo@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.23.0", features = ["full"] }
tokio-stream = "0.1.9"
warp = "0.3"
serde = {version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
futures = { version = "0.3", default-features = false }
uuid = { version = "1.2.2", features = ["serde", "v4"] }
crossbeam = "0.7"
actix-web = "4"
ureq = { version = "2.5.0", features = ["json"] }
